--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "aws-sdk": "^2.1398.0",
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
@@ -12,10 +14,9 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server" : "nodemon index.js"
+    "server": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
