--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,7 +9,9 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.4",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "name": "backend",
   "version": "1.0.0",
